--- a/main.ipynb
+++ b/main.ipynb
@@ -2681,6 +2681,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e6829d43",
+   "metadata": {},
+   "source": [
+    "#### Find all ex rxns that exist within the Recon3D model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "id": "7b217925",
@@ -2701,6 +2709,22 @@
     "    if rxn.id.startswith('EX_'):\n",
     "        ex_rxns.append(rxn.id)\n",
     "print(len(ex_rxns))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "453b6379",
+   "metadata": {},
+   "source": [
+    "- In total there are 1560 exchange rxns in the full model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef90c0f0",
+   "metadata": {},
+   "source": [
+    "#### Looks if the ex rxns that exist are in the medium reactions if they are then 1 else 0"
    ]
   },
   {
