--- a/pipeline.ipynb
+++ b/pipeline.ipynb
@@ -65,17 +65,7 @@
    "execution_count": 3,
    "id": "ec13b96c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Read LP format model from file C:\\Users\\leabr\\AppData\\Local\\Temp\\tmpshahnbjp.lp\n",
-      "Reading time = 0.07 seconds\n",
-      ": 5835 rows, 21200 columns, 80850 nonzeros\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_fva_LG_min  = pd.read_csv('./data/fva_exoflux_LG_min_sum.csv', index_col=0)\n",
     "\n",
@@ -84,9 +74,8 @@
     "df_fva_LG_min.loc[invalid_mask, ['minimum', 'maximum']] = 0.0\n",
     "\n",
     "#inject bounds into the model\n",
-    "LG_model = model.copy()\n",
     "for index, row in df_fva_LG_min.iterrows():\n",
-    "    LG_model.reactions.get_by_id(index).bounds = (row['minimum'], row['maximum'])"
+    "    model.reactions.get_by_id(index).bounds = (row['minimum'], row['maximum'])"
    ]
   },
   {
@@ -107,95 +96,12 @@
    ],
    "source": [
     "# check feasibility\n",
-    "print(LG_model.slim_optimize())\n",
+    "print(model.slim_optimize())\n",
     "\n",
     "# verify objective matches biomass \n",
-    "solution = LG_model.optimize()\n",
+    "solution = model.optimize()\n",
     "print(\"Objective:\", solution.objective_value)\n",
     "print(\"BIOMASS_reaction flux:\", solution.fluxes.get(\"BIOMASS_reaction\", 0))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "9a409f7d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "save_json_model(LG_model, \"./data/LG_model.json\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9b56bc45",
-   "metadata": {},
-   "source": [
-    "### High Grade Model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "c0b4915f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Read LP format model from file C:\\Users\\leabr\\AppData\\Local\\Temp\\tmpayqtxrnz.lp\n",
-      "Reading time = 0.08 seconds\n",
-      ": 5835 rows, 21200 columns, 80850 nonzeros\n"
-     ]
-    }
-   ],
-   "source": [
-    "df_fva_HG_min  = pd.read_csv('./data/fva_exoflux_HG_min_sum.csv', index_col=0)\n",
-    "\n",
-    "df_fva_HG_min[['minimum', 'maximum']] = df_fva_HG_min[['minimum', 'maximum']].fillna(0.0)\n",
-    "invalid_mask = df_fva_HG_min['minimum'] > df_fva_HG_min['maximum']\n",
-    "df_fva_HG_min.loc[invalid_mask, ['minimum', 'maximum']] = 0.0\n",
-    "\n",
-    "#inject bounds into the model\n",
-    "HG_model = model.copy()\n",
-    "for index, row in df_fva_HG_min.iterrows():\n",
-    "    HG_model.reactions.get_by_id(index).bounds = (row['minimum'], row['maximum'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "ec989dd9",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0224804490992415\n",
-      "Objective: 0.0224804490992415\n",
-      "BIOMASS_reaction flux: 0.0224804490992415\n"
-     ]
-    }
-   ],
-   "source": [
-    "# check feasibility\n",
-    "print(HG_model.slim_optimize())\n",
-    "\n",
-    "# verify objective matches biomass \n",
-    "solution = HG_model.optimize()\n",
-    "print(\"Objective:\", solution.objective_value)\n",
-    "print(\"BIOMASS_reaction flux:\", solution.fluxes.get(\"BIOMASS_reaction\", 0))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "eac6da5d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "save_json_model(HG_model, \"./data/HG_model.json\")"
    ]
   },
   {
@@ -208,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "769007c1",
    "metadata": {},
    "outputs": [],
@@ -226,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "21906fc7",
    "metadata": {},
    "outputs": [
@@ -446,7 +352,7 @@
        "[5 rows x 19221 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "b650cec5",
    "metadata": {},
    "outputs": [
@@ -487,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "f927ed81",
    "metadata": {},
    "outputs": [],
@@ -506,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "9c670e2a",
    "metadata": {},
    "outputs": [
@@ -531,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "d04bebf3",
    "metadata": {},
    "outputs": [
@@ -555,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "33e97eaf",
    "metadata": {},
    "outputs": [
@@ -585,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "1609280d",
    "metadata": {},
    "outputs": [],
@@ -596,74 +502,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
+   "id": "ebf55439",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\leabr\\Ovarian-Cancer\\functions.py:10: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_essential[\"rxn_ids\"]=df_essential.ids.apply(lambda x: list(x)[0] if isinstance(x, (set, frozenset)) else x) # remove {} around ids\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_essential = functions.rxn_essential(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "2a385b5b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Original bounds: (0.0, 0.1763227726404629)\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "cannot unpack non-iterable NoneType object",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[21]\u001b[39m\u001b[32m, line 13\u001b[39m\n\u001b[32m     11\u001b[39m rule_type = functions.classify_rule(rxn)\n\u001b[32m     12\u001b[39m new_bounds = functions.calculate_new_bounds(rxn, rule_type, \u001b[33m\"\u001b[39m\u001b[33mACH-000520\u001b[39m\u001b[33m\"\u001b[39m, CCLE_name_map, CCLE_expression)\n\u001b[32m---> \u001b[39m\u001b[32m13\u001b[39m rxn.lower_bound, rxn.upper_bound = new_bounds\n\u001b[32m     14\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m    Bounds after calculate_new_bounds: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mrxn.bounds\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     15\u001b[39m solution = model.optimize()\n",
+      "\u001b[31mTypeError\u001b[39m: cannot unpack non-iterable NoneType object"
+     ]
+    }
+   ],
    "source": [
-    "def build_cell_line_model(model, cell_line, experimental_growth, df):\n",
-    "    m = model.copy()\n",
-    "    for rxn in m.reactions:\n",
-    "        functions.clean_bounds(rxn)\n",
-    "        if functions.is_defined_inmedia(rxn.id):\n",
-    "            continue\n",
-    "        if functions.is_essential_reaction(df, rxn.id):\n",
+    "for rxn in model.reactions[10:30]:\n",
+    "    functions.clean_bounds(rxn)\n",
+    "    old_lb, old_ub = rxn.lower_bound, rxn.upper_bound\n",
+    "    print(f\"    Original bounds: ({old_lb}, {old_ub})\")\n",
+    "    if functions.is_defined_inmedia(rxn.id):\n",
+    "        continue\n",
+    "    if functions.is_essential_reaction(df_essential, rxn.id):\n",
+    "        functions.open_bounds(rxn)\n",
+    "        continue\n",
+    "    if functions.has_transcriptomics(rxn, CCLE_gene_names):\n",
+    "        rule_type = functions.classify_rule(rxn)\n",
+    "        new_bounds = functions.calculate_new_bounds(rxn, rule_type, \"ACH-000520\", CCLE_name_map, CCLE_expression)\n",
+    "        rxn.lower_bound, rxn.upper_bound = new_bounds\n",
+    "        print(f\"    Bounds after calculate_new_bounds: {rxn.bounds}\")\n",
+    "        solution = model.optimize()\n",
+    "        if solution.status != 'optimal':\n",
+    "            print(\"   → Infeasible when constraining\", rxn.id, \". Opening bounds.\")\n",
     "            functions.open_bounds(rxn)\n",
     "            continue\n",
-    "        if functions.has_transcriptomics(rxn, CCLE_gene_names):\n",
-    "            rule_type = functions.classify_rule(rxn)\n",
-    "            functions.calculate_new_bounds(rxn, rule_type, cell_line, CCLE_name_map, CCLE_expression)\n",
-    "            solution = m.optimize()\n",
-    "            growth = solution.fluxes[\"BIOMASS_reaction\"]\n",
-    "            if  growth <= experimental_growth:\n",
-    "                functions.open_bounds(rxn)\n",
-    "                m.optimize()\n",
-    "        else:\n",
+    "        growth = solution.fluxes[\"BIOMASS_reaction\"]\n",
+    "        print(growth)\n",
+    "        if  growth <= 0.0519:\n",
+    "            print(\"yes\")\n",
     "            functions.open_bounds(rxn)\n",
-    "\n",
-    "    return m"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "db317e96",
-   "metadata": {},
-   "source": [
-    "### Low Grade Cell lines"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e27a8463",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_essential = functions.rxn_essential(LG_model)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "22213144",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_59m = build_cell_line_model(LG_model, \"ACH-000520\", 0.02083, df_essential)\n",
-    "model_heya8 = build_cell_line_model(LG_model, \"ACH-000542\", 0.0625, df_essential)\n",
-    "model_ov56 = build_cell_line_model(LG_model, \"ACH-000091\", 0.0409, df_essential)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "560b4ba3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "save_json_model(model_59m, \"./data/model_59m.json\")\n",
-    "save_json_model(model_heya8, \"./data/model_heya8.json\")\n",
-    "save_json_model(model_ov56, \"./data/model_ov56.json\")"
+    "    else:\n",
+    "        functions.open_bounds(rxn)"
    ]
   }
  ],
