--- a/pipeline.ipynb
+++ b/pipeline.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "id": "e1d6f885",
    "metadata": {},
    "outputs": [],
@@ -19,6 +19,7 @@
     "from cobra.io import load_json_model, save_json_model\n",
     "import re\n",
     "from cobra.flux_analysis import single_reaction_deletion\n",
+    "from cobra.flux_analysis import flux_variability_analysis\n",
     "import functions"
    ]
   },
@@ -525,56 +526,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "2a385b5b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    Original bounds: (0.0, 0.1763227726404629)\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "cannot unpack non-iterable NoneType object",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[21]\u001b[39m\u001b[32m, line 13\u001b[39m\n\u001b[32m     11\u001b[39m rule_type = functions.classify_rule(rxn)\n\u001b[32m     12\u001b[39m new_bounds = functions.calculate_new_bounds(rxn, rule_type, \u001b[33m\"\u001b[39m\u001b[33mACH-000520\u001b[39m\u001b[33m\"\u001b[39m, CCLE_name_map, CCLE_expression)\n\u001b[32m---> \u001b[39m\u001b[32m13\u001b[39m rxn.lower_bound, rxn.upper_bound = new_bounds\n\u001b[32m     14\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m    Bounds after calculate_new_bounds: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mrxn.bounds\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     15\u001b[39m solution = model.optimize()\n",
-      "\u001b[31mTypeError\u001b[39m: cannot unpack non-iterable NoneType object"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for rxn in model.reactions[10:30]:\n",
-    "    functions.clean_bounds(rxn)\n",
-    "    old_lb, old_ub = rxn.lower_bound, rxn.upper_bound\n",
-    "    print(f\"    Original bounds: ({old_lb}, {old_ub})\")\n",
+    "for rxn in model.reactions:\n",
+    "    new_bounds = functions.clean_bounds(rxn)\n",
+    "    if new_bounds is not None:\n",
+    "            rxn.lower_bound, rxn.upper_bound = new_bounds\n",
     "    if functions.is_defined_inmedia(rxn.id):\n",
     "        continue\n",
     "    if functions.is_essential_reaction(df_essential, rxn.id):\n",
-    "        functions.open_bounds(rxn)\n",
+    "        new_bounds = functions.open_bounds(rxn)\n",
+    "        if new_bounds is not None:\n",
+    "            rxn.lower_bound, rxn.upper_bound = new_bounds\n",
     "        continue\n",
     "    if functions.has_transcriptomics(rxn, CCLE_gene_names):\n",
     "        rule_type = functions.classify_rule(rxn)\n",
     "        new_bounds = functions.calculate_new_bounds(rxn, rule_type, \"ACH-000520\", CCLE_name_map, CCLE_expression)\n",
-    "        rxn.lower_bound, rxn.upper_bound = new_bounds\n",
-    "        print(f\"    Bounds after calculate_new_bounds: {rxn.bounds}\")\n",
+    "        if new_bounds is not None:\n",
+    "            rxn.lower_bound, rxn.upper_bound = new_bounds\n",
     "        solution = model.optimize()\n",
-    "        if solution.status != 'optimal':\n",
-    "            print(\"   → Infeasible when constraining\", rxn.id, \". Opening bounds.\")\n",
-    "            functions.open_bounds(rxn)\n",
-    "            continue\n",
     "        growth = solution.fluxes[\"BIOMASS_reaction\"]\n",
     "        print(growth)\n",
     "        if  growth <= 0.0519:\n",
     "            print(\"yes\")\n",
-    "            functions.open_bounds(rxn)\n",
+    "            new_bounds = functions.open_bounds(rxn)\n",
+    "            if new_bounds is not None:\n",
+    "                rxn.lower_bound, rxn.upper_bound = new_bounds\n",
     "    else:\n",
-    "        functions.open_bounds(rxn)"
+    "        new_bounds = functions.open_bounds(rxn)\n",
+    "        if new_bounds is not None:\n",
+    "                rxn.lower_bound, rxn.upper_bound = new_bounds\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "0d98f11b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Infeasible",
+     "evalue": "There is no optimal solution for the chosen objective! (infeasible).",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mInfeasible\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[22]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m df_59m = \u001b[43mflux_variability_analysis\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfraction_of_optimum\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m0.0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mprocesses\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m20\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\leabr\\anaconda3\\envs\\trial\\Lib\\site-packages\\cobra\\flux_analysis\\variability.py:187\u001b[39m, in \u001b[36mflux_variability_analysis\u001b[39m\u001b[34m(model, reaction_list, loopless, fraction_of_optimum, pfba_factor, processes)\u001b[39m\n\u001b[32m    184\u001b[39m prob = model.problem\n\u001b[32m    185\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m model:\n\u001b[32m    186\u001b[39m     \u001b[38;5;66;03m# Safety check before setting up FVA.\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m187\u001b[39m     \u001b[43mmodel\u001b[49m\u001b[43m.\u001b[49m\u001b[43mslim_optimize\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    188\u001b[39m \u001b[43m        \u001b[49m\u001b[43merror_value\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[32m    189\u001b[39m \u001b[43m        \u001b[49m\u001b[43mmessage\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mThere is no optimal solution for the chosen objective!\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m    190\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    191\u001b[39m     \u001b[38;5;66;03m# Add the previous objective as a variable to the model then set it to\u001b[39;00m\n\u001b[32m    192\u001b[39m     \u001b[38;5;66;03m# zero. This also uses the fraction to create the lower/upper bound for\u001b[39;00m\n\u001b[32m    193\u001b[39m     \u001b[38;5;66;03m# the old objective.\u001b[39;00m\n\u001b[32m    194\u001b[39m     \u001b[38;5;66;03m# TODO: Use utility function here (fix_objective_as_constraint)?\u001b[39;00m\n\u001b[32m    195\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m model.solver.objective.direction == \u001b[33m\"\u001b[39m\u001b[33mmax\u001b[39m\u001b[33m\"\u001b[39m:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\leabr\\anaconda3\\envs\\trial\\Lib\\site-packages\\cobra\\core\\model.py:1202\u001b[39m, in \u001b[36mModel.slim_optimize\u001b[39m\u001b[34m(self, error_value, message)\u001b[39m\n\u001b[32m   1200\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m error_value\n\u001b[32m   1201\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m1202\u001b[39m     \u001b[43massert_optimal\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmessage\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\leabr\\anaconda3\\envs\\trial\\Lib\\site-packages\\cobra\\util\\solver.py:590\u001b[39m, in \u001b[36massert_optimal\u001b[39m\u001b[34m(model, message)\u001b[39m\n\u001b[32m    588\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m status != OPTIMAL:\n\u001b[32m    589\u001b[39m     exception_cls = OPTLANG_TO_EXCEPTIONS_DICT.get(status, OptimizationError)\n\u001b[32m--> \u001b[39m\u001b[32m590\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m exception_cls(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmessage\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m (\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mstatus\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m).\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mInfeasible\u001b[39m: There is no optimal solution for the chosen objective! (infeasible)."
+     ]
+    }
+   ],
+   "source": [
+    "df_59m = flux_variability_analysis(model, fraction_of_optimum=0.0, processes=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d71059d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_59m.to_csv('./data/fva_59m.csv')"
    ]
   }
  ],
