--- a/flux_composition.ipynb
+++ b/flux_composition.ipynb
@@ -73,34 +73,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hi\n",
-      "LG_59M :  178.90834242799173\n",
-      "hi\n",
-      "LG_HEYA8 :  167.3424025396205\n",
-      "hi\n",
-      "LG_OV56 :  177.6725358833259\n",
-      "hi\n",
-      "HG_CAOV3 :  187.23800345109214\n",
-      "hi\n",
-      "HG_COV318 :  168.3898619215588\n",
-      "hi\n",
-      "HG_OAW28 :  193.22163603973084\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "models = {}\n",
     "\n",
     "for name in cell_lines.keys():\n",
     "    model = load_json_model('./data/Recon3D.json')\n",
     "    model.solver = 'gurobi'\n",
+    "    model.reactions.get_by_id(\"BIOMASS_reaction\").bounds = (row['maximum']*0.9, row['maximum'])\n",
     "    print(\"hi\")\n",
     "    df = cell_lines[name]\n",
     "    oopsie_df= df.loc[df['minimum'] > df['maximum']]\n",
@@ -648,7 +630,7 @@
    "outputs": [],
    "source": [
     "for id,data in cell_lines.items():\n",
-    "    all_samples[id].to_csv(f\"data/flux_sampling_data/flux_sampling_{id}.csv\")"
+    "    all_samples[id].to_csv(f\"data/flux_sampling_data/flux_sampling_test_{id}.csv\")"
    ]
   },
   {
