changed FC value to 90%

--- a/flux_composition_anastasia.ipynb
+++ b/flux_composition_anastasia.ipynb
@@ -738,7 +738,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Glycolysis"
+    "## Flux Distribution comparisions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Option 1"
    ]
   },
   {
@@ -1079,8 +1086,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Option 3"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1088,7 +1102,7 @@
     "# Statistical Threshold (Adjusted P-value / Q-value)\n",
     "FDR_Q_VALUE_CUTOFF = 0.05 \n",
     "# Effect Size Threshold (Log2 Fold Change equivalent to your 20% change)\n",
-    "LOG2_FC_CUTOFF = 0.26 \n",
+    "LOG2_FC_CUTOFF = 0.9\n",
     "\n",
     "# --- INITIALIZATION ---\n",
     "# 'rxns', 'LG', and 'HG' are assumed to be defined (e.g., 'LG' and 'HG' are dicts of dataframes)\n",
@@ -1143,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1161,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1169,15 +1183,15 @@
      "output_type": "stream",
      "text": [
       "Total tests performed: 378\n",
-      "Significant and substantial hits found: 231\n",
+      "Significant and substantial hits found: 118\n",
       "\n",
       "--- Example Significant Hits ---\n",
       "  reaction group_a group_b  U_statistic  raw_p_value   log2_FC  q_value\n",
       "0   ALCD2y     59M  COV318          0.0          0.0  1.531462      0.0\n",
       "1   ALCD2y     59M   CAOV3          0.0          0.0  1.729590      0.0\n",
       "2   ALCD2y     59M   OAW28       2213.0          0.0  1.302793      0.0\n",
-      "3   ALCD2y   HEYA8  COV318          0.0          0.0  0.872450      0.0\n",
-      "4   ALCD2y   HEYA8   CAOV3          0.0          0.0  1.070578      0.0\n"
+      "4   ALCD2y   HEYA8   CAOV3          0.0          0.0  1.070578      0.0\n",
+      "9  ALDD2xm     59M  COV318    1000000.0          0.0 -1.824202      0.0\n"
      ]
     }
    ],
