two fold change methods implemented

--- a/flux_composition_anastasia.ipynb
+++ b/flux_composition_anastasia.ipynb
@@ -57,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## seperating reactions into pathways"
+    "# Seperating reactions into pathways"
    ]
   },
   {
@@ -611,7 +611,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Flux sampling"
+    "# Flux sampling"
    ]
   },
   {
@@ -697,7 +697,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Flux Distribution comparisions"
+    "# Flux Distribution comparisions"
    ]
   },
   {
@@ -1453,6 +1453,330 @@
    "source": [
     "signif = df_stats_2[df_stats_2[\"p_adjusted\"] < 0.01]\n",
     "signif"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>reaction</th>\n",
+       "      <th>LG</th>\n",
+       "      <th>HG</th>\n",
+       "      <th>U_stat</th>\n",
+       "      <th>p_value</th>\n",
+       "      <th>mean_LG</th>\n",
+       "      <th>mean_HG</th>\n",
+       "      <th>fold_change</th>\n",
+       "      <th>p_adjusted</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ALCD2y</td>\n",
+       "      <td>59M</td>\n",
+       "      <td>COV318</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.708023e-08</td>\n",
+       "      <td>4.937532e-08</td>\n",
+       "      <td>0.654073</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ALCD2y</td>\n",
+       "      <td>59M</td>\n",
+       "      <td>CAOV3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.708023e-08</td>\n",
+       "      <td>5.664380e-08</td>\n",
+       "      <td>0.698462</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ALCD2y</td>\n",
+       "      <td>59M</td>\n",
+       "      <td>OAW28</td>\n",
+       "      <td>2213.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.708023e-08</td>\n",
+       "      <td>4.213798e-08</td>\n",
+       "      <td>0.594659</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ALCD2y</td>\n",
+       "      <td>HEYA8</td>\n",
+       "      <td>COV318</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.696971e-08</td>\n",
+       "      <td>4.937532e-08</td>\n",
+       "      <td>0.453782</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ALCD2y</td>\n",
+       "      <td>HEYA8</td>\n",
+       "      <td>CAOV3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.696971e-08</td>\n",
+       "      <td>5.664380e-08</td>\n",
+       "      <td>0.523872</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>372</th>\n",
+       "      <td>AGPOP</td>\n",
+       "      <td>HEYA8</td>\n",
+       "      <td>COV318</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.659835e+02</td>\n",
+       "      <td>4.355200e+02</td>\n",
+       "      <td>0.618884</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>373</th>\n",
+       "      <td>AGPOP</td>\n",
+       "      <td>HEYA8</td>\n",
+       "      <td>CAOV3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.659835e+02</td>\n",
+       "      <td>3.184086e+02</td>\n",
+       "      <td>0.478709</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>374</th>\n",
+       "      <td>AGPOP</td>\n",
+       "      <td>HEYA8</td>\n",
+       "      <td>OAW28</td>\n",
+       "      <td>331.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.659835e+02</td>\n",
+       "      <td>2.513565e+02</td>\n",
+       "      <td>0.339649</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>375</th>\n",
+       "      <td>AGPOP</td>\n",
+       "      <td>OV56</td>\n",
+       "      <td>COV318</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.472524e+02</td>\n",
+       "      <td>4.355200e+02</td>\n",
+       "      <td>0.432282</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>376</th>\n",
+       "      <td>AGPOP</td>\n",
+       "      <td>OV56</td>\n",
+       "      <td>CAOV3</td>\n",
+       "      <td>1023.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.472524e+02</td>\n",
+       "      <td>3.184086e+02</td>\n",
+       "      <td>0.223475</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>271 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    reaction     LG      HG  U_stat  p_value       mean_LG       mean_HG  \\\n",
+       "0     ALCD2y    59M  COV318     0.0      0.0  1.708023e-08  4.937532e-08   \n",
+       "1     ALCD2y    59M   CAOV3     0.0      0.0  1.708023e-08  5.664380e-08   \n",
+       "2     ALCD2y    59M   OAW28  2213.0      0.0  1.708023e-08  4.213798e-08   \n",
+       "3     ALCD2y  HEYA8  COV318     0.0      0.0  2.696971e-08  4.937532e-08   \n",
+       "4     ALCD2y  HEYA8   CAOV3     0.0      0.0  2.696971e-08  5.664380e-08   \n",
+       "..       ...    ...     ...     ...      ...           ...           ...   \n",
+       "372    AGPOP  HEYA8  COV318     0.0      0.0  1.659835e+02  4.355200e+02   \n",
+       "373    AGPOP  HEYA8   CAOV3     0.0      0.0  1.659835e+02  3.184086e+02   \n",
+       "374    AGPOP  HEYA8   OAW28   331.0      0.0  1.659835e+02  2.513565e+02   \n",
+       "375    AGPOP   OV56  COV318     0.0      0.0  2.472524e+02  4.355200e+02   \n",
+       "376    AGPOP   OV56   CAOV3  1023.0      0.0  2.472524e+02  3.184086e+02   \n",
+       "\n",
+       "     fold_change  p_adjusted  \n",
+       "0       0.654073         0.0  \n",
+       "1       0.698462         0.0  \n",
+       "2       0.594659         0.0  \n",
+       "3       0.453782         0.0  \n",
+       "4       0.523872         0.0  \n",
+       "..           ...         ...  \n",
+       "372     0.618884         0.0  \n",
+       "373     0.478709         0.0  \n",
+       "374     0.339649         0.0  \n",
+       "375     0.432282         0.0  \n",
+       "376     0.223475         0.0  \n",
+       "\n",
+       "[271 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 50% cutoff = FD >= 0.50\n",
+    "signif_50 = df_stats_2[df_stats_2[\"fold_change\"] >= 0.2]\n",
+    "signif_50\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Option 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total tests performed: 378\n",
+      "Significant and substantial hits found: 231\n",
+      "\n",
+      "--- Example Significant Hits ---\n",
+      "  reaction group_a group_b  U_statistic  raw_p_value   log2_FC  q_value\n",
+      "0   ALCD2y     59M  COV318          0.0          0.0  1.531462      0.0\n",
+      "1   ALCD2y     59M   CAOV3          0.0          0.0  1.729590      0.0\n",
+      "2   ALCD2y     59M   OAW28       2213.0          0.0  1.302793      0.0\n",
+      "3   ALCD2y   HEYA8  COV318          0.0          0.0  0.872450      0.0\n",
+      "4   ALCD2y   HEYA8   CAOV3          0.0          0.0  1.070578      0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Statistical Threshold (Adjusted P-value / Q-value)\n",
+    "FDR_Q_VALUE_CUTOFF = 0.01\n",
+    "# Effect Size Threshold (Log2 Fold Change equivalent to your 20% change)\n",
+    "LOG2_FC_CUTOFF = 0.26 \n",
+    "\n",
+    "all_results_data = []\n",
+    "\n",
+    "for rxn in rxns:\n",
+    "    for lg_name, lg_df in LG.items():\n",
+    "        for hg_name, hg_df in HG.items():\n",
+    "            \n",
+    "            # extract distributions\n",
+    "            lg_values = lg_df[rxn].dropna()\n",
+    "            hg_values = hg_df[rxn].dropna()\n",
+    "            \n",
+    "            if len(lg_values) < 3 or len(hg_values) < 3:\n",
+    "                # Skip if too few observations for robust test\n",
+    "                continue\n",
+    "            \n",
+    "            # Calculate the means for log2FC calculation\n",
+    "            mean_lg = lg_values.mean()\n",
+    "            mean_hg = hg_values.mean()\n",
+    "\n",
+    "            # Handle division by zero for log2FC: use a small pseudo-count or check for zero\n",
+    "            # Here, we check for near-zero means for stability (a standard log2FC practice)\n",
+    "            if mean_lg > 0 and mean_hg > 0:\n",
+    "                # Calculate Log2 Fold Change (HG vs LG)\n",
+    "                # log2(HG / LG)\n",
+    "                log2_fc = np.log2(mean_hg / mean_lg)\n",
+    "            else:\n",
+    "                # If one or both means are zero or negative, set log2_fc to NaN or a large value \n",
+    "                # to mark it, and filter later. For now, use NaN.\n",
+    "                log2_fc = np.nan\n",
+    "            \n",
+    "            # Mann-Whitney U test (non-parametric, distribution vs distribution)\n",
+    "            stat, pval = mannwhitneyu(lg_values, hg_values, alternative=\"two-sided\")\n",
+    "            \n",
+    "            # Store data for the final DataFrame\n",
+    "            all_results_data.append({\n",
+    "                'reaction': rxn,\n",
+    "                'group_a': lg_name,\n",
+    "                'group_b': hg_name,\n",
+    "                'U_statistic': stat,\n",
+    "                'raw_p_value': pval,\n",
+    "                'log2_FC': log2_fc\n",
+    "            })\n",
+    "\n",
+    "# Convert the list of results into a DataFrame\n",
+    "df_results = pd.DataFrame(all_results_data)\n",
+    "\n",
+    "\n",
+    "# We use the Benjamini/Hochberg method to calculate the False Discovery Rate (FDR)\n",
+    "# This generates the adjusted p-value (q-value)\n",
+    "reject, qvals, _, _ = multipletests(\n",
+    "    pvals=df_results['raw_p_value'], \n",
+    "    alpha=FDR_Q_VALUE_CUTOFF, # The alpha is used internally for testing\n",
+    "    method='fdr_bh' # Benjamini/Hochberg method\n",
+    ")\n",
+    "\n",
+    "# Add the Q-values to the DataFrame\n",
+    "df_results['q_value'] = qvals\n",
+    "\n",
+    "\n",
+    "# A hit must satisfy both the statistical and the effect size criteria:\n",
+    "# 1. q_value must be less than the FDR cutoff (e.g., 0.05)\n",
+    "# 2. The absolute log2_FC must be greater than the magnitude cutoff (e.g., 0.26)\n",
+    "significant_and_substantial_hits = df_results[\n",
+    "    (df_results['q_value'] <= FDR_Q_VALUE_CUTOFF) & \n",
+    "    (df_results['log2_FC'].abs() >= LOG2_FC_CUTOFF)\n",
+    "]\n",
+    "\n",
+    "# The final result DataFrame is 'significant_and_substantial_hits'\n",
+    "print(f\"Total tests performed: {len(df_results)}\")\n",
+    "print(f\"Significant and substantial hits found: {len(significant_and_substantial_hits)}\")\n",
+    "print(\"\\n--- Example Significant Hits ---\")\n",
+    "print(significant_and_substantial_hits.head())"
    ]
   }
  ],
