top 10 reactions for every pathway

--- a/flux_composition_anastasia.ipynb
+++ b/flux_composition_anastasia.ipynb
@@ -1778,6 +1778,301 @@
     "print(\"\\n--- Example Significant Hits ---\")\n",
     "print(significant_and_substantial_hits.head())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Automated version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pathway</th>\n",
+       "      <th>reaction</th>\n",
+       "      <th>LG</th>\n",
+       "      <th>HG</th>\n",
+       "      <th>U_stat</th>\n",
+       "      <th>p_value</th>\n",
+       "      <th>mean_LG</th>\n",
+       "      <th>mean_HG</th>\n",
+       "      <th>fold_change</th>\n",
+       "      <th>p_adjusted</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>lipid</td>\n",
+       "      <td>GALGT4</td>\n",
+       "      <td>OV56</td>\n",
+       "      <td>COV318</td>\n",
+       "      <td>1000000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.317355</td>\n",
+       "      <td>-1.211306e-10</td>\n",
+       "      <td>2.619939e+09</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>lipid</td>\n",
+       "      <td>ST6GALNAC27</td>\n",
+       "      <td>OV56</td>\n",
+       "      <td>COV318</td>\n",
+       "      <td>1000000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.317355</td>\n",
+       "      <td>-1.211306e-10</td>\n",
+       "      <td>2.619939e+09</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>lipid</td>\n",
+       "      <td>B3GALT44g</td>\n",
+       "      <td>OV56</td>\n",
+       "      <td>COV318</td>\n",
+       "      <td>1000000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.317355</td>\n",
+       "      <td>-1.211306e-10</td>\n",
+       "      <td>2.619939e+09</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>lipid</td>\n",
+       "      <td>GALGT3</td>\n",
+       "      <td>59M</td>\n",
+       "      <td>COV318</td>\n",
+       "      <td>1000000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.360861</td>\n",
+       "      <td>-2.215100e-10</td>\n",
+       "      <td>1.629093e+09</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>lipid</td>\n",
+       "      <td>B3GALT43g</td>\n",
+       "      <td>59M</td>\n",
+       "      <td>COV318</td>\n",
+       "      <td>1000000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.360861</td>\n",
+       "      <td>-2.215100e-10</td>\n",
+       "      <td>1.629093e+09</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65</th>\n",
+       "      <td>tca</td>\n",
+       "      <td>ALATA_Lm</td>\n",
+       "      <td>59M</td>\n",
+       "      <td>COV318</td>\n",
+       "      <td>1000000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>226.746086</td>\n",
+       "      <td>6.025306e+01</td>\n",
+       "      <td>2.763229e+00</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66</th>\n",
+       "      <td>tca</td>\n",
+       "      <td>MDHm</td>\n",
+       "      <td>59M</td>\n",
+       "      <td>COV318</td>\n",
+       "      <td>1000000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>128.581755</td>\n",
+       "      <td>-8.188342e+01</td>\n",
+       "      <td>2.570303e+00</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>tca</td>\n",
+       "      <td>SUCOAS1m</td>\n",
+       "      <td>OV56</td>\n",
+       "      <td>CAOV3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-199.887254</td>\n",
+       "      <td>-5.914431e+01</td>\n",
+       "      <td>2.379653e+00</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>tca</td>\n",
+       "      <td>MDHm</td>\n",
+       "      <td>59M</td>\n",
+       "      <td>CAOV3</td>\n",
+       "      <td>1000000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>128.581755</td>\n",
+       "      <td>-1.266043e+02</td>\n",
+       "      <td>2.015619e+00</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>tca</td>\n",
+       "      <td>ALATA_Lm</td>\n",
+       "      <td>OV56</td>\n",
+       "      <td>COV318</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-59.448200</td>\n",
+       "      <td>6.025306e+01</td>\n",
+       "      <td>1.986642e+00</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>70 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   pathway     reaction    LG      HG     U_stat  p_value     mean_LG  \\\n",
+       "0    lipid       GALGT4  OV56  COV318  1000000.0      0.0    0.317355   \n",
+       "1    lipid  ST6GALNAC27  OV56  COV318  1000000.0      0.0    0.317355   \n",
+       "2    lipid    B3GALT44g  OV56  COV318  1000000.0      0.0    0.317355   \n",
+       "3    lipid       GALGT3   59M  COV318  1000000.0      0.0    0.360861   \n",
+       "4    lipid    B3GALT43g   59M  COV318  1000000.0      0.0    0.360861   \n",
+       "..     ...          ...   ...     ...        ...      ...         ...   \n",
+       "65     tca     ALATA_Lm   59M  COV318  1000000.0      0.0  226.746086   \n",
+       "66     tca         MDHm   59M  COV318  1000000.0      0.0  128.581755   \n",
+       "67     tca     SUCOAS1m  OV56   CAOV3        0.0      0.0 -199.887254   \n",
+       "68     tca         MDHm   59M   CAOV3  1000000.0      0.0  128.581755   \n",
+       "69     tca     ALATA_Lm  OV56  COV318        0.0      0.0  -59.448200   \n",
+       "\n",
+       "         mean_HG   fold_change  p_adjusted  \n",
+       "0  -1.211306e-10  2.619939e+09         0.0  \n",
+       "1  -1.211306e-10  2.619939e+09         0.0  \n",
+       "2  -1.211306e-10  2.619939e+09         0.0  \n",
+       "3  -2.215100e-10  1.629093e+09         0.0  \n",
+       "4  -2.215100e-10  1.629093e+09         0.0  \n",
+       "..           ...           ...         ...  \n",
+       "65  6.025306e+01  2.763229e+00         0.0  \n",
+       "66 -8.188342e+01  2.570303e+00         0.0  \n",
+       "67 -5.914431e+01  2.379653e+00         0.0  \n",
+       "68 -1.266043e+02  2.015619e+00         0.0  \n",
+       "69  6.025306e+01  1.986642e+00         0.0  \n",
+       "\n",
+       "[70 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results = []\n",
+    "\n",
+    "# Iterate across all pathways\n",
+    "for pathway, reactions in reactions_by_category.items():\n",
+    "\n",
+    "    for rxn in reactions:  # only reactions in this pathway\n",
+    "\n",
+    "        for lg_name, lg_df in LG.items():\n",
+    "            for hg_name, hg_df in HG.items():\n",
+    "\n",
+    "                # extract distributions\n",
+    "                if rxn not in lg_df.columns or rxn not in hg_df.columns:\n",
+    "                    continue\n",
+    "\n",
+    "                lg_values = lg_df[rxn].dropna()\n",
+    "                hg_values = hg_df[rxn].dropna()\n",
+    "\n",
+    "                # skip empty\n",
+    "                if len(lg_values) == 0 or len(hg_values) == 0:\n",
+    "                    continue\n",
+    "\n",
+    "                # compute means\n",
+    "                mean_lg = lg_values.mean()\n",
+    "                mean_hg = hg_values.mean()\n",
+    "\n",
+    "                # Fold Difference FD = |(mean_lg - mean_hg) / mean_hg|\n",
+    "                if mean_hg == 0:\n",
+    "                    FD = np.nan\n",
+    "                else:\n",
+    "                    FD = abs((mean_lg - mean_hg) / mean_hg)\n",
+    "\n",
+    "                # Mann-Whitney U test\n",
+    "                stat, pval = mannwhitneyu(lg_values, hg_values, alternative=\"two-sided\")\n",
+    "\n",
+    "                results.append([\n",
+    "                    pathway, rxn, lg_name, hg_name,\n",
+    "                    stat, pval, mean_lg, mean_hg, FD\n",
+    "                ])\n",
+    "\n",
+    "# Build DataFrame\n",
+    "df_stats = pd.DataFrame(results, columns=[\n",
+    "    \"pathway\", \"reaction\", \"LG\", \"HG\",\n",
+    "    \"U_stat\", \"p_value\", \"mean_LG\", \"mean_HG\", \"fold_change\"\n",
+    "])\n",
+    "\n",
+    "# Multiple testing correction\n",
+    "df_stats[\"p_adjusted\"] = multipletests(df_stats[\"p_value\"], method=\"fdr_bh\")[1]\n",
+    "\n",
+    "# Keep significant results\n",
+    "signif = df_stats[df_stats[\"p_adjusted\"] < 0.01].copy()\n",
+    "\n",
+    "# -----------------------\n",
+    "#  TOP 10 PER PATHWAY\n",
+    "# -----------------------\n",
+    "top10_per_pathway = (\n",
+    "    signif\n",
+    "    .sort_values(by=\"fold_change\", ascending=False)\n",
+    "    .groupby(\"pathway\")\n",
+    "    .head(10)\n",
+    "    .reset_index(drop=True)\n",
+    ")\n",
+    "\n",
+    "top10_per_pathway\n"
+   ]
   }
  ],
  "metadata": {
