--- a/flux_composition.ipynb
+++ b/flux_composition.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,9 +44,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Set parameter Username\n",
+      "Set parameter LicenseID to value 2732830\n",
+      "Academic license - for non-commercial use only - expires 2026-11-04\n"
+     ]
+    }
+   ],
    "source": [
     "model = load_json_model('./data/Recon3D.json')\n",
     "model.solver = 'gurobi'\n",
@@ -62,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,9 +145,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Glycolysis: 42 reactions\n",
+      "TCA: 20 reactions\n",
+      "Pentose Phosphate Pathway: 41 reactions\n"
+     ]
+    }
+   ],
    "source": [
     "for cat, rxns in selected.items():\n",
     "    # Using set() here ensures unique IDs count\n",
@@ -146,9 +166,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ALATA_Lm  →  Citric acid cycle\n",
+      "SUCOAS1m  →  Citric acid cycle\n",
+      "MDHm  →  Citric acid cycle\n",
+      "ACONT  →  Citric acid cycle\n",
+      "ACITL  →  Citric acid cycle\n"
+     ]
+    }
+   ],
    "source": [
     "# Optional: Check specific reactions for one of the groups (e.g., TCA)\n",
     "for rxn_id in list(set(selected[\"TCA\"]))[:5]: # printing first 5 as example\n",
@@ -158,9 +190,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Categories created: dict_keys(['glycolysis', 'tca', 'ppp'])\n"
+     ]
+    }
+   ],
    "source": [
     "# MODIFIED: Final dictionary only contains the 3 requested pathways\n",
     "reactions_by_category = {\n",
@@ -181,12 +221,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "low_grade = {\n",
-    "    'ACH-000520': '59M',\n",
     "    'ACH-000542': 'HEYA8',\n",
     "    'ACH-000091': 'OV56'\n",
     "}\n",
@@ -199,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +260,6 @@
     "        df_fva = pd.read_csv(fva_path, index_col=0)\n",
     "\n",
     "        # Clean invalid or missing bounds\n",
-    "        df_fva[['minimum', 'maximum']] = df_fva[['minimum', 'maximum']].fillna(0.0)\n",
     "        invalid = df_fva['minimum'] > df_fva['maximum']\n",
     "        df_fva.loc[invalid, ['minimum', 'maximum']] = 0.0\n",
     "\n",
@@ -233,15 +271,11 @@
     "        sol = model.optimize()\n",
     "        print(f\"   Status: {sol.status}, Growth: {sol.objective_value}\")\n",
     "\n",
-    "        #  Fix biomass at 90% of UB\n",
-    "        UB = model.reactions.get_by_id('BIOMASS_reaction').upper_bound\n",
-    "        model.reactions.get_by_id('BIOMASS_reaction').bounds = (0.9 * UB, UB)\n",
-    "\n",
-    "        # 7) Run flux sampling\n",
+    "        # Run flux sampling\n",
     "        print(\"   Running OPTGP sampling...\")\n",
-    "        samples = sample(model, n=1000, method=\"optgp\", thinning=100, seed=42)\n",
+    "        samples = sample(model, n=1000, method=\"optgp\", thinning=100, seed=42, processes= 2)\n",
     "\n",
-    "        # 8) Save CSV\n",
+    "        # Save CSV\n",
     "        out_path = f\"./data/flux_sampling_data/flux_sampling_{suffix}_{cl_name}.csv\"\n",
     "        samples.to_csv(out_path)\n",
     "\n",
@@ -658,6 +692,11 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "trial",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -668,7 +707,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
